--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -11,10 +11,11 @@
   left: 0;
   top: 0;
   height: 100%;
-  width: 260px;
-  background: #11101D;
+  width: auto;
+  background: #005134;
+  margin-left:0;
+  z-index: 2;
 }
-
 .sidebar .logo-details{
   height: 60px;
   width: 100%;
@@ -22,7 +23,6 @@
   align-items: center;
   /* position: relative; */
 }
-
 .sidebar .logo-details i{
     font-size:30px;
     color: #fff;
@@ -31,25 +31,21 @@
     text-align: center;
     line-height:50px;
 }
-
 .sidebar .logo-details .logo_name{
     font-size: 22px;
     color: #fff;
     font-weight: 600;
 }
-
 .sidebar .nav-links{
-    background: black;
+    background: #005134;
     height:100%;
     padding-top: 30px;
 }
-
 .sidebar .nav-links li{
     position: relative;
     list-style: none;
     transition:all 0.4s ease;
 }
-
 .sidebar .nav-links li i{
 
     height: 50px;
@@ -59,7 +55,6 @@
     color: #fff;
     font-size: 20px;
 }
-
 .sidebar .nav-links li a{
     display: flex;
     text-decoration: none;
@@ -67,30 +62,25 @@
     color: #fff;
     
 }
-
 .sidebar .nav-links li:hover{
     background-color: #1d1b31;
 }
-
 .sidebar .nav-links li a .links_name{
     font-weight: 400px;
     font-size:18px;
     color: #fff;
  }
-
  .sidebar .nav-links li .icon-link{
     display: flex;
     align-items: center;
     justify-content:space-between;
 }
-
 .sidebar .nav-links li .sub-menu{
     padding:6px 6px 14px 80px ;
     margin-top: -10px;
     background-color:#1d1b31;
     /* display: none; */
 }
-
 .sidebar .nav-links li .sub-menu a{
     color: #fff;
     font-size: 15px;
@@ -98,13 +88,13 @@
     white-space: nowrap;
     transition: all 0.3 ease;
  }
-
 .sidebar.close .nav-links li .sub-menu{
    position:absolute;
    left: 100%;
    top: -10px;
    margin-top: 0;
-   padding: 10px 20px;
+   margin-left:0;
+   padding: 10px 8px;
    border-radius:0 6px 6px 0;
    transition: all 0.4s ease;
    opacity: 0;
@@ -118,19 +108,15 @@
 .sidebar .nav-links li .sub-menu .links_name{
  display:none;
 }
-
 .sidebar.close .nav-links li .sub-menu .links_name{
  font-size:18px ;
  opacity: 1;
  display: block;
 }
-
 .sidebar .nav-links li .sub-menu a:hover{
     opacity:1 ;
 
 }
-
-
 .sidebar .nav-links li .sub-menu.blank{
     opacity: 1;
     pointer-events: auto;
