--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,5 +1,6 @@
 /* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -27,7 +28,7 @@
     font-size:30px;
     color: #fff;
     height: 50px;
-    min-width: 78px;
+    min-width: 48px;
     text-align: center;
     line-height:50px;
 }
@@ -49,11 +50,12 @@
 .sidebar .nav-links li i{
 
     height: 50px;
-    min-width: 78px;
+    min-width: 45px;
     text-align: center;
     line-height:50px;
     color: #fff;
     font-size: 20px;
+    margin-top: 8px;
 }
 .sidebar .nav-links li a{
     display: flex;
