--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,8 +4,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 10px;
-  padding-bottom: 7%;
-  /* height:110vh; */
+  margin-bottom: 7%;
 }
 .about-us-image-col {
   background-color: #fbfbfb;
